# cortex

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Doxyfile  ProjectOptions.cmake  README.md  README_dependencies.md
.github/workflows/: cmake.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
src/: CMakeLists.txt
src/cortex/: CMakeLists.txt
src/cortex/include/cortex/: basic_flow.hpp  coroutine.hpp  cortex.hpp  error.hpp  execution.hpp  machine_context.hpp  naive_coroutine.hpp  stack.hpp  stack_allocator.hpp
src/cortex/include/cortex/api/: disabler.hpp  flow.hpp  suspendable.hpp
src/cortex/src/: basic_flow.cpp  coroutine.cpp  cortex.cpp  execution.cpp  machine_context.cpp  naive_coroutine.cpp  stack_allocator.cpp
test/: CMakeLists.txt  coroutine_test.cpp  just_works_test.cpp  memory_leak_test.cpp  naive_coroutine_test.cpp  nested_execution_test.cpp  rethrow_exception_test.cpp  stack_allocator_test.cpp  tests.cpp
